# SO-FEUP-23-24

./: .gitignore
Code/: call_by_reference.c  char_array.c  good_pointer.c  pointers.c  trig.c
Code/Sheet 1/: bad_pointer.c
Code/Sheet 2/: CMakeLists.txt  list.h  list_add_first.c  list_add_last.c  list_get_first.c  list_get_last.c  list_new.c  list_new_random.c  list_print.c  list_remove_first.c  list_remove_last.c  list_size.c  node_new.c  use_list.c  use_vector.c  vector.h  vector_add.c  vector_mod.c  vector_new.c  vector_scale.c  vector_sprod.c  vector_sub.c  vector_vprod.c
Code/Sheet 3/: CMakeLists.txt  ex_2.c  ex_2_mine.c  filetest.c  maintest.c  mycat.c  mycp.c  mygrep.c  mywc.c  text2.txt
Code/Sheet 4/: CMakeLists.txt
Code/Sheet 4/src/: mycat.c  myls.c  stat.c
Code/Sheet 5/: CMakeLists.txt  f5_3.c  f5_4.c  fork.c  shell.c
